--- a/.github/workflows/mysql84-docker.yml
+++ b/.github/workflows/mysql84-docker.yml
@@ -1,7 +1,11 @@
 name: MySQL 8.4 GA /w docker-compose
 on:
   push:
-    branches: [ main ]
+    tags:
+      - v*
+    branches:
+      - main
+      - release/v*
   pull_request:
     branches: [ main ]
 jobs:
