--- a/.github/workflows/mysql8_rbr_minimal-docker.yml
+++ b/.github/workflows/mysql8_rbr_minimal-docker.yml
@@ -1,7 +1,11 @@
 name: MySQL 8.0.33 (RBR minimal) /w docker-compose
 on:
   push:
-    branches: [ main ]
+    tags:
+      - v*
+    branches:
+      - main
+      - release/v*
   pull_request:
     branches: [ main ]
 jobs:
